Add .chezmoi.toml Add .software_installer_logs/00_.log Add .software_installer_logs/00_utils.log Add .software_installer_logs/01_terminal.log Add .software_installer_logs/02_node.log Add .software_installer_logs/03_hyprland.log Add .software_installer_logs/04_git_based.log Add .software_installer_logs/05_ide.log Add .software_installer_logs/06_browser.log Add .bashrc.d/keychain.bashrc Update .config/hypr/configs/binds.conf Update .config/hypr/configs/env.conf Update .config/hypr/configs/exec.conf Remove .config/hypr/configs/monitors.conf Remove .config/hypr/configs/rules.conf Add .config/hypr/configs/monitors.conf Add .config/hypr/configs/rules.conf Update .config/hypr/hyprland.conf Update scripts/mongodump.sh Update software_installers/00_utils.sh Update software_installers/03_hyprland.sh Update software_installers/06_browser.sh

--- a/dot_config/hypr/configs/executable_binds.conf.tmpl
+++ b/dot_config/hypr/configs/executable_binds.conf.tmpl
@@ -42,11 +42,11 @@ bind=$mainMod SHIFT, EQUAL, movecurrentworkspacetomonitor, -1
 bind=$mainMod SHIFT, MINUS, movecurrentworkspacetomonitor, +1
 bind=$mainMod, mouse_down, workspace, e+1
 bind=$mainMod, mouse_up, workspace, e-1
-bind=, Print, exec, /home/{{ .username }}/scripts/snip
-bind=SHIFT, Print, exec, /home/{{ .username }}/scripts/record
-bind=$mainMod, L, exec, /home/{{ .username }}/scripts/lock_cmd
+bind=, Print, exec, /home/{{ .chezmoi.username }}/scripts/snip
+bind=SHIFT, Print, exec, /home/{{ .chezmoi.username }}/scripts/record
+bind=$mainMod, L, exec, /home/{{ .chezmoi.username }}/scripts/lock_cmd
 bind=$mainMod, M, exec, ~/.config/wofi/power-menu.sh
-bind=$mainMod, T, exec, /home/{{ .username }}/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
+bind=$mainMod, T, exec, /home/{{ .chezmoi.username }}/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
 bind=$mainMod, XF86AudioPlay, exec, ~/.config/wofi/change-default-audio-device.js WofiListAudioDevices
 bindl=, XF86AudioPlay, exec, playerctl play-pause
 bindl=, XF86AudioStop, exec, playerctl stop
