--- a/dot_config/hypr/executable_hyprland.conf.tmpl
+++ b/dot_config/hypr/executable_hyprland.conf.tmpl
@@ -1,14 +1,14 @@
-source = /home/{{ .username }}/.config/hypr/configs/env.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/env.conf
 
 $mainMod=SUPER
 
-source = /home/{{ .username }}/.config/hypr/configs/style.conf
-source = /home/{{ .username }}/.config/hypr/configs/binds.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/style.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/binds.conf
 
-source = /home/{{ .username }}/.config/hypr/configs/monitors.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/monitors.conf
 # source = ~/.config/hypr/monitors.conf
 
-source = /home/{{ .username }}/.config/hypr/configs/rules.conf
-source = /home/{{ .username }}/.config/hypr/configs/hdr.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/rules.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/hdr.conf
 
-source = /home/{{ .username }}/.config/hypr/configs/exec.conf
+source = /home/{{ .chezmoi.username }}/.config/hypr/configs/exec.conf
