--- a/scripts/executable_mongodump.sh.tmpl
+++ b/scripts/executable_mongodump.sh.tmpl
@@ -1,2 +1,2 @@
-mongodump --uri="mongodb+srv://veritas-dev_admin_{{ .username }}_readWrite@veritas.mucwd.mongodb.net/e-prescribe" --out=./mongodump-file
+mongodump --uri="mongodb+srv://veritas-dev_admin_{{ .chezmoi.username }}_readWrite@veritas.mucwd.mongodb.net/e-prescribe" --out=./mongodump-file
 
