--- a/dot_config/hypr/configs/executable_env.conf.tmpl
+++ b/dot_config/hypr/configs/executable_env.conf.tmpl
@@ -19,4 +19,4 @@
 # env = INPUT_METHOD, fcitx
 
 # Wallpaper path for theme generation
-env = WALLPAPER_PATH,/home/{{ .username }}/Pictures/forrest.png
+env = WALLPAPER_PATH,/home/{{ .chezmoi.username }}/Pictures/forrest.png
