--- a/dot_config/hypr/configs/monitors.conf.tmpl
+++ b/dot_config/hypr/configs/monitors.conf.tmpl
@@ -25,6 +25,9 @@ workspace = 1, monitor:DP-3, default:true
 workspace = 4, monitor:DP-3
 workspace = 7, monitor:DP-3
 {{ else }}
+# eDP positioned to left of external monitors (negative offset)
+monitor = eDP-2,preferred,-2560x0,1
+
 workspace = 1, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63, default:true
 workspace = 4, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63
 workspace = 7, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63
