--- a/dot_config/hypr/configs/env.conf.tmpl
+++ b/dot_config/hypr/configs/env.conf.tmpl
@@ -1,3 +1,4 @@
+# Theme-related envs managed by theme-toggle script
 # env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 # env = XDG_CURRENT_DESKTOP,Hyprland
 # env = XDG_CONFIG_HOME,$HOME/.config
