--- a/dot_config/uwsm/env.tmpl
+++ b/dot_config/uwsm/env.tmpl
@@ -3,7 +3,7 @@ export GNOME_KEYRING_CONTROL=/run/user/1000/keyring
 export SSH_AUTH_SOCK=/run/user/1000/keyring/ssh
 
 # Theme and toolkit variables
-export WALLPAPER_PATH=/home/mason/Pictures/forrest.png
+export WALLPAPER_PATH={{ .wallpaper }}
 export QT_QPA_PLATFORMTHEME=qt6ct
 export MOZ_ENABLE_WAYLAND=1
 export ELECTRON_OZONE_PLATFORM_HINT=wayland
