--- a/dot_config/hypr/configs/monitors.conf.tmpl
+++ b/dot_config/hypr/configs/monitors.conf.tmpl
@@ -28,6 +28,9 @@ workspace = 7, monitor:DP-3
 # eDP positioned to left of external monitors (negative offset)
 monitor = eDP-2,preferred,-2560x0,1
 
+monitor = desc:Dell Inc. DELL P3221D 15Q7X83, highres, auto-right,auto
+monitor = desc:BNQ BenQ LCD 91F06464SL0, 2560x1440, auto-left,auto
+
 workspace = 1, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63, default:true
 workspace = 4, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63
 workspace = 7, monitor:desc:Dell Inc. DELL S3422DWG HSRTS63
