--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -8,10 +8,12 @@
 
 [credential]
     credentialStore = secretservice
-    helper = /usr/local/bin/git-credential-manager
 
 [credential "https://dev.azure.com"]
     useHttpPath = true
 
 [push]
     autoSetupRemote = true
+
+[url "git@github.com:"]
+    insteadOf = https://github.com/
