--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -37,7 +37,7 @@ window#waybar{
 }
 .modules-right {
     padding:7px;
-    margin: 10 10 5 0;
+    margin: 5 5 5 0;
     border-radius:10px;
     background: alpha(@background,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
@@ -46,7 +46,7 @@ tooltip {
     background:@background;
     color: @color7;
 }
-#clock:hover, #custom-pacman:hover, #bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+#clock:hover, #custom-pacman:hover, #bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover,#pulseaudio:hover{
     transition: all .3s ease;
     color:@accent;
 }
@@ -61,9 +61,18 @@ tooltip {
     box-shadow: none;
     outline: none;
 }
+
+#custom-notification.notification,
+#custom-notification.dnd-notification,
+#custom-notification.inhibited-notification,
+#custom-notification.dnd-inhibited-notification {
+    background: alpha(@accent, .3);
+    color: @background;
+}
+
 #custom-notification:hover {
     background: alpha(@background, .35);
-    color: @foreground; /* keep text color stable */
+    color: @foreground;
     border: none;
     box-shadow: none;
     outline: none;
