Update .config/hypr/configs/exec.conf Add .config/matugen/templates/waybar.css Update .config/nvim/lazy-lock.json Update .config/nvim/lua/user/claudecode.lua Update .config/nvim/lua/user/dap.lua Update .config/nvim/lua/user/gitsigns.lua Update .config/nvim/lua/user/lspsettings/vtsls.lua Update .config/nvim/lua/user/mason.lua Update .config/nvim/lua/user/neogit.lua Update .config/waybar/style.css Update .wezterm.lua Add scripts/hyprland-theme-toggle/theme-restore.sh Update scripts/hyprland-theme-toggle/modules/hyprpanel.sh Add scripts/hyprland-theme-toggle/modules/waybar.sh Change attributes of .config/waybar/config

--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -19,7 +19,7 @@ exec-once=swaybg -i $WALLPAPER_PATH -m fill
 # Generate material you colors from wallpaper
 exec-once=matugen image $WALLPAPER_PATH -m dark
 
-exec-once = /home/mason/scripts/hyprland-theme-toggle/theme-toggle-modular.sh dark >/dev/null 2>&1
+exec = /home/mason/scripts/hyprland-theme-toggle/theme-restore.sh >/dev/null 2>&1
 
 # Update hyprpanel wallpaper config and launch
 #exec=sed -i "s|\"wallpaper.image\": \".*\"|\"wallpaper.image\": \"$WALLPAPER_PATH\"|" ~/.config/hyprpanel/config.json && uwsm app -- hyprpanel
