Update .config/matugen/config.toml Update .config/matugen/templates/colors.css Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lua/user/autocmds.lua Add .config/nvim/lua/user/bg.lua Update .config/nvim/lua/user/colorscheme.lua Update .config/waybar/config Update .config/waybar/style.css Update .config/wofi/style.css Update .tmux.conf Update .wezterm.lua Update scripts/lock_cmd Update scripts/hyprland-theme-toggle/theme-toggle-modular.sh Update scripts/hyprland-theme-toggle/modules/base.sh Update scripts/hyprland-theme-toggle/modules/hyprpanel.sh Add scripts/hyprland-theme-toggle/modules/nvim.sh Add scripts/hyprland-theme-toggle/modules/swaync.sh Update scripts/hyprland-theme-toggle/modules/tmux.sh Update scripts/hyprland-theme-toggle/modules/waybar.sh Update scripts/hyprland-theme-toggle/modules/wezterm.sh Add scripts/idle-inhibitor/README.md Add scripts/idle-inhibitor/idle-inhibitor-daemon.sh Add scripts/idle-inhibitor/toggle.sh Add scripts/idle-inhibitor/waybar-module.sh Add scripts/idle-inhibitor/modules/base.sh

--- a/dot_config/waybar/config.tmpl
+++ b/dot_config/waybar/config.tmpl
@@ -11,7 +11,7 @@
             "pulseaudio",
             "tray",
             "custom/updates",
-            "idle_inhibitor",
+            "custom/idle-inhibitor",
             "clock",
             "custom/notification",
             "battery"
@@ -180,14 +180,13 @@
             "icon-size": 18,
             "spacing": 10
         },
-        "idle_inhibitor": {
-            "format": "{icon}",
-            "format-icons": {
-                "activated": "󰅶",
-                "deactivated": "󰾪"
-            },
-            "tooltip-format-activated": "Idle inhibition active",
-            "tooltip-format-deactivated": "Idle inhibition inactive"
+        "custom/idle-inhibitor": {
+            "format": "{}",
+            "return-type": "json",
+            "interval": "once",
+            "exec": "$HOME/scripts/idle-inhibitor/waybar-module.sh",
+            "on-click": "$HOME/scripts/idle-inhibitor/toggle.sh",
+            "signal": 9
         }
 } 
 
