Update .config/hypr/configs/binds.conf Update .config/nvim/lazy-lock.json Update .config/nvim/lua/user/lspconfig.lua Update .config/nvim/lua/user/lspsettings/vtsls.lua Update .config/nvim/lua/user/none-ls.lua Update .config/nvim/lua/user/project.lua Update .config/wofi/launch-drun.sh

--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -1,3 +1,5 @@
+$Meh=CTRL ALT SHIFT
+
 bind=$mainMod, Q, exec, wezterm
 bind=$mainMod, C, killactive, 
 bind=$mainMod, E, exec, nautilus
@@ -10,6 +12,10 @@ bind=$mainMod, left, movefocus, l
 bind=$mainMod, right, movefocus, r
 bind=$mainMod, up, movefocus, u
 bind=$mainMod, down, movefocus, d
+bind=$Meh, h, movefocus, l
+bind=$Meh, j, movefocus, d
+bind=$Meh, k, movefocus, u
+bind=$Meh, l, movefocus, r
 bind=$mainMod SHIFT, left, movewindow, l
 bind=$mainMod SHIFT, right, movewindow, r
 bind=$mainMod SHIFT, up, movewindow, u
